--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/publish-dialog/publish-dialog.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/publish-dialog/publish-dialog.component.scss
@@ -1,4 +1,4 @@
 .publish-dialog-content {
-    font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
+    font-family: 'BCSans', 'Open Sans', Verdana, Arial, sans-serif;
     padding-bottom: 5%;
 }
