--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/video-gallery-panel/video-card-component/video-card-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/video-gallery-panel/video-card-component/video-card-panel.component.scss
@@ -18,7 +18,7 @@
     }
   
     .info-panel {
-      font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
+      font-family: 'BCSans', 'Open Sans', Verdana, Arial, sans-serif;
       padding: 5px;
       width: 40%;
   
