--- a/client/wfnews-war/src/main/angular/src/app/components/common/unsaved-changes-dialog/unsaved-changes-dialog.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/common/unsaved-changes-dialog/unsaved-changes-dialog.component.scss
@@ -1,5 +1,5 @@
 .unsaved-changes-dialog-content {
-  font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
+  font-family: 'BCSans', 'Open Sans', Verdana, Arial, sans-serif;
   padding-bottom: 5%;
 }
 
