--- a/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.scss
@@ -1,5 +1,5 @@
 mat-tab-group {
-  font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif !important;
+  font-family: 'BCSans', 'Open Sans', Verdana, Arial, sans-serif !important;
 }
 
 :host ::ng-deep .mat-mdc-tab {
@@ -20,9 +20,9 @@ mat-tab-group {
 ::ng-deep .wildfires-tabs{
 
     padding-top: 1rem;
-    font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif !important;
+    font-family: 'BCSans', 'Open Sans', Verdana, Arial, sans-serif !important;
     .mat-mdc-tab-group {
-      font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif !important;
+      font-family: 'BCSans', 'Open Sans', Verdana, Arial, sans-serif !important;
     }
     .mat-mdc-tab-labels{
         padding-bottom: 1rem;
