--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel/incident-gallery-panel-mobile/incident-gallery-panel-mobile.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel/incident-gallery-panel-mobile/incident-gallery-panel-mobile.component.scss
@@ -2,7 +2,7 @@
 
     .content-panel {
         padding:24px;
-        font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
+        font-family: 'BCSans', 'Open Sans', Verdana, Arial, sans-serif;
             h1 {
                 font-size: 22px;
                 width: 90%;
