--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel-mobile/incident-info-panel-mobile.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel-mobile/incident-info-panel-mobile.component.scss
@@ -15,7 +15,7 @@
                 height: 33px;
                 background-color: rgba(255, 255, 255, 0);
                 box-sizing: border-box;
-                font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
+                font-family: 'BCSans', 'Open Sans', Verdana, Arial, sans-serif;
                 font-weight: 500;
                 color: #252628;
                 text-align: left;
@@ -27,7 +27,7 @@
                 height: 24px;
                 background-color: rgba(255, 255, 255, 0);
                 box-sizing: border-box;
-                font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
+                font-family: 'BCSans', 'Open Sans', Verdana, Arial, sans-serif;
                 font-weight: 500;
                 color: #333333;
                 text-align: left;
@@ -37,7 +37,7 @@
             }
 
             .sub-title{
-                font-family: "BCSans", "Noto Sans", Verdana, Arial, sans-serif;
+                font-family: "BCSans", "Open Sans", Verdana, Arial, sans-serif;
                 font-size: 16px;
                 display: flex;
                 color: #333333;
@@ -63,7 +63,7 @@
             }
 
             .sub-content {
-                font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
+                font-family: 'BCSans', 'Open Sans', Verdana, Arial, sans-serif;
                 color: #6e6e6e;
                 text-align: left;
                 line-height: 24px;
