--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.scss
@@ -1,5 +1,5 @@
 :host {
-  font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
+  font-family: 'BCSans', 'Open Sans', Verdana, Arial, sans-serif;
 }
 
 .spacer-bottom {
@@ -155,7 +155,7 @@
 
 @media print{
   :host {
-    font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
+    font-family: 'BCSans', 'Open Sans', Verdana, Arial, sans-serif;
   }
   app-root {
     display: block;
