--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-maps-panel/incident-maps-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-maps-panel/incident-maps-panel.component.scss
@@ -1,6 +1,6 @@
 @media screen, print {
     :host {
-      font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
+      font-family: 'BCSans', 'Open Sans', Verdana, Arial, sans-serif;
     }
 
     .panel {
