--- a/client/wfnews-war/src/main/angular/src/app/components/sticky-widget/sticky-widget.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/sticky-widget/sticky-widget.component.scss
@@ -1,5 +1,5 @@
 :host {
-  font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
+  font-family: 'BCSans', 'Open Sans', Verdana, Arial, sans-serif;
 }
 
 .sticky-widget{
