--- a/client/wfnews-war/src/main/angular/src/app/components/wf-map-container/wf-map-container.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/wf-map-container/wf-map-container.component.scss
@@ -176,7 +176,7 @@
 
                 &::after {
                     content: '';
-                    font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
+                    font-family: 'BCSans', 'Open Sans', Verdana, Arial, sans-serif;
                     font-weight: normal;
                     font-style: normal;
                     line-height: 1;
