--- a/client/wfnews-war/src/main/angular/src/app/components/wildfire-resources/resource-panel/resource-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/wildfire-resources/resource-panel/resource-panel.component.scss
@@ -2,7 +2,7 @@
   border: 1px solid #e9eff5;
   border-radius: 3px;
   background: white;
-  font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
+  font-family: 'BCSans', 'Open Sans', Verdana, Arial, sans-serif;
   margin-bottom: 40px;
   .title {
     color: black;
