--- a/client/wfnews-war/src/main/angular/src/app/components/wildfires-list/wildfires-list.component.desktop.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/wildfires-list/wildfires-list.component.desktop.scss
@@ -27,9 +27,11 @@
     padding: 0;
   }
   .mat-icon {
-    padding-right: 5px;
     color: #a7a9ac;
     margin-right: 0 !important;
+  }
+  button span {
+    white-space: nowrap;
   }
 }
 
