--- a/client/wfnews-war/src/main/angular/src/styles/_smk.scss
+++ b/client/wfnews-war/src/main/angular/src/styles/_smk.scss
@@ -42,5 +42,5 @@
 .smk-feature-list .smk-layer .smk-feature {
   text-decoration: underline;
   color: #1a5a96;
-  font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
+  font-family: 'BCSans', 'Open Sans', Verdana, Arial, sans-serif;
 }
