--- a/client/wfnews-war/src/main/angular/src/styles/_variables.scss
+++ b/client/wfnews-war/src/main/angular/src/styles/_variables.scss
@@ -104,12 +104,12 @@ $wf1-loading-screen-height: calc(100vh - (6rem));
 $max-component-width: 65rem;
 
 // Tables measurements
-$font-family-main: 'BCSans', 'Noto Sans', 'Verdana', 'Arial', 'sans-serif';
+$font-family-main: 'BCSans', 'Open Sans', 'Verdana', 'Arial', 'sans-serif';
 $font-size: 15px;
 $colour-button-primary: $colour-blue;
 $colour-intermediate-action: $colour-success;
 $colour-table-background-odd: $colour-lighter-grey;
-$font-family-emphasis: 'BCSans', 'Noto Sans', 'Verdana', 'Arial', 'sans-serif';
+$font-family-emphasis: 'BCSans', 'Open Sans', 'Verdana', 'Arial', 'sans-serif';
 $font-size-small: 12px;
 $wf1-border-radius: 5px;
 $font-weight-emphasis: 400;
