--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel/image-panel/image-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel/image-panel/image-panel.component.scss
@@ -1,7 +1,7 @@
 .title-row {
     width: 100%;
     height: 24px;
-    font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
+    font-family: 'BCSans', 'Open Sans', Verdana, Arial, sans-serif;
     font-weight: 500;
     color: #333333;
     text-align: left;
@@ -11,7 +11,7 @@
 
 .date-row {
     height: 24px;
-    font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
+    font-family: 'BCSans', 'Open Sans', Verdana, Arial, sans-serif;
     color: #6e6e6e;
     text-align: left;
     line-height: 24px;
