--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel/incident-gallery-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel/incident-gallery-panel.component.scss
@@ -3,7 +3,7 @@
 @import url('https://www.lightgalleryjs.com/css/lightgallery-bundle.css');
 @import 'lightgallery/scss/lightgallery';
 :host {
-    font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
+    font-family: 'BCSans', 'Open Sans', Verdana, Arial, sans-serif;
   }
 
 
