--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/public-incident-page.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/public-incident-page.component.scss
@@ -1,11 +1,11 @@
 @import '../../../styles/variables';
 :host {
-  font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
+  font-family: 'BCSans', 'Open Sans', Verdana, Arial, sans-serif;
 }
 
 @media print{
   :host {
-    font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
+    font-family: 'BCSans', 'Open Sans', Verdana, Arial, sans-serif;
     width: 100%;
     height: 100%;
   }
