--- a/client/wfnews-war/src/main/angular/src/app/components/sticky-widget/contact-widget-dialog/contact-widget-dialog.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/sticky-widget/contact-widget-dialog/contact-widget-dialog.component.scss
@@ -87,7 +87,7 @@
             justify-content: start;
 
             .label{
-                font-family: "BCSans", "Noto Sans", "Verdana", "Arial", "sans-serif";
+                font-family: "BCSans", "Open Sans", "Verdana", "Arial", "sans-serif";
                 font-weight: 400;
                 padding: 5px 1.5px;
             }
@@ -98,7 +98,7 @@
                 border-radius: 5px;
                 height: 35px;
                 line-height: 35px;
-                font-family: "BCSans", "Noto Sans", "Verdana", "Arial", "sans-serif";
+                font-family: "BCSans", "Open Sans", "Verdana", "Arial", "sans-serif";
                 font-size: 15px;
             }
             input:focus, textarea:focus{
