--- a/client/wfnews-war/src/main/angular/src/app/components/wildfire-resources/wf-resources.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/wildfire-resources/wf-resources.component.scss
@@ -1,7 +1,7 @@
 .container {
   height: calc(100vh - 125px) !important;
   overflow: hidden;
-  font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
+  font-family: 'BCSans', 'Open Sans', Verdana, Arial, sans-serif;
   padding: 20px;
   background-color: white;
   max-width: 1300px;
