--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel/incident-gallery-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel/incident-gallery-panel.component.scss
@@ -3,7 +3,7 @@
 @import url('https://www.lightgalleryjs.com/css/lightgallery-bundle.css');
 @import 'lightgallery/scss/lightgallery';
 :host {
-    font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
+    font-family: 'BCSans', 'Open Sans', Verdana, Arial, sans-serif;
   }
 
 
@@ -72,7 +72,6 @@
         font-size: 1.2rem;
         font-weight: 700;
       }
-      /* TODO(mdc-migration): The following rule targets internal classes of select that may no longer apply for the MDC version. */
       ::ng-deep .mat-select-trigger {
         height: 35px !important;
       }
