--- a/client/wfnews-war/src/main/angular/src/app/components/sticky-widget/sticky-widget.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/sticky-widget/sticky-widget.component.scss
@@ -1,5 +1,5 @@
 :host {
-  font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
+  font-family: 'BCSans', 'Open Sans', Verdana, Arial, sans-serif;
 }
 
 .sticky-widget{
@@ -117,13 +117,11 @@
   }
 }
 
-/* TODO(mdc-migration): The following rule targets internal classes of progress-bar that may no longer apply for the MDC version. */
-::ng-deep .mat-progress-bar-fill::after {
+::ng-deep .mdc-linear-progress__fill::after {
   background-color: #1a5a9684;
 }
 
-/* TODO(mdc-migration): The following rule targets internal classes of progress-bar that may no longer apply for the MDC version. */
-::ng-deep .mat-progress-bar-buffer {
+::ng-deep .mdc-linear-progress__buffer {
   background: white;
 }
 
