--- a/client/wfnews-war/src/main/angular/src/styles/main.scss
+++ b/client/wfnews-war/src/main/angular/src/styles/main.scss
@@ -28,27 +28,20 @@
 .columns-menu{
   display: flex;
   flex: 0 0 auto;
-  /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-  /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-  /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-  div.mat-form-field-wrapper {
+  div.mat-mdc-text-field-wrapper
+ {
     padding-bottom: 0;
-    /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-    div.mat-form-field-underline {
+    div.mdc-line-ripple {
       display: none;
     }
-    /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-    /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-    div.mat-form-field-infix {
+    div.mat-mdc-form-text-infix {
       width: 50px;
       border-top: 0;
       padding: 0;
-      /*TODO(mdc-migration): The following rule targets internal classes of select that may no longer apply for the MDC version.*/
       mat-select,
       input{
         width: 100%;
       }
-      /*TODO(mdc-migration): The following rule targets internal classes of select that may no longer apply for the MDC version.*/
       .mat-select-arrow-wrapper{
         visibility: hidden;
       }
@@ -135,7 +128,6 @@
     font-family: $font-family-main;
     font-size: 13px;
   }
-  /*TODO(mdc-migration): The following rule targets internal classes of button that may no longer apply for the MDC version.*/
   .mat-button-wrapper{
     color:$colour-white;
   }
@@ -150,7 +142,6 @@
     font-family: $font-family-main;
     font-size: 13px;
   }
-  /*TODO(mdc-migration): The following rule targets internal classes of button that may no longer apply for the MDC version.*/
   .mat-button-wrapper{
     color:$colour-white;
   }
@@ -187,7 +178,6 @@
     font-family: $font-family-main;
     font-size: 13px;
   }
-  /*TODO(mdc-migration): The following rule targets internal classes of button that may no longer apply for the MDC version.*/
   .mat-button-wrapper{
     color:$colour-white;
   }
@@ -249,13 +239,11 @@
 //}
 
 @media print {
-  /*TODO(mdc-migration): The following rule targets internal classes of tabs that may no longer apply for the MDC version.*/
   mat-table,
   tr,
   mat-sidenav-content{
     width: 750px !important;
   }
-  /*TODO(mdc-migration): The following rule targets internal classes of tabs that may no longer apply for the MDC version.*/
   mat-table{
     display: block;
   }
@@ -422,7 +410,6 @@
       .summary-card{
         margin: var(--wf1-gutter-space) 0 0 0;
       }
-      /*TODO(mdc-migration): The following rule targets internal classes of card that may no longer apply for the MDC version.*/
       mat-card.mat-mdc-card.wf1-vendor-portal-header-bar {
         padding: 0;
       }
@@ -458,7 +445,7 @@
 }
 
 .smk-popup {
-  font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
+  font-family: 'BCSans', 'Open Sans', Verdana, Arial, sans-serif;
   padding-bottom: 10px;
 }
 
@@ -541,6 +528,7 @@
 
 .dialog-container {
   h1 {
+    font-family: 'BCSans', 'Open Sans', Verdana, Arial, sans-serif !important;
     font-weight: 100 !important;
     background-color: #003366;
     color: white;
@@ -560,6 +548,10 @@
     button {
       margin-right: 7px;
     }
+  }
+  .dialog-content{
+    font-family: 'BCSans', 'Open Sans', Verdana, Arial, sans-serif !important;
+
   }
 }
 
@@ -649,12 +641,12 @@ wf-admin-incident-desktop{
   display: block;
   overflow: hidden;
   border-radius: 20px !important;
-  font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
+  font-family: 'BCSans', 'Open Sans', Verdana, Arial, sans-serif;
 }
 
 .mat-mdc-slide-toggle {
   .mdc-form-field{
-    font-family: "BCSans", "Noto Sans", Verdana, Arial, sans-serif !important;
+    font-family: "BCSans", "Open Sans", Verdana, Arial, sans-serif !important;
     font-size: 17px;
   }
 }
@@ -664,7 +656,7 @@ wf-admin-incident-desktop{
 
 .mdc-form-field{
   label{
-    font-family: "BCSans", "Noto Sans", Verdana, Arial, sans-serif !important;
+    font-family: "BCSans", "Open Sans", Verdana, Arial, sans-serif !important;
     padding-left: 8px !important;
   }
 }
@@ -685,7 +677,7 @@ mat-snack-bar-container{
     background-color: inherit !important;
     .mat-mdc-snack-bar-label{
       font-size: 13px !important;
-      font-family: BCSans,Noto Sans,Verdana,Arial,"sans-serif" !important;
+      font-family: 'BCSans', 'Open Sans', Verdana, Arial, sans-serif !important;
       color: white !important;
     }
     .mdc-button__label {
@@ -693,4 +685,11 @@ mat-snack-bar-container{
     }
   }
 }
-  // class="mat-mdc-snack-bar-label mdc-snackbar__label"
+
+.mdc-button {
+  font-family: 'BCSans', 'Open Sans', Verdana, Arial, sans-serif !important;
+}
+
+.mdc-text-field--filled:not(.mdc-text-field--disabled){
+  background-color: inherit !important;
+}
