--- a/client/wfnews-war/src/main/angular/src/styles/main.scss
+++ b/client/wfnews-war/src/main/angular/src/styles/main.scss
@@ -15,6 +15,9 @@
 @import 'smk';
 @import 'lightgallery/scss/lightgallery';
 
+html {
+  font-family: $font-family-main;
+}
 
 .snackbar-error{
    background-color: $colour-errors;
