--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/publish-dialog/publish-dialog.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/publish-dialog/publish-dialog.component.scss
@@ -1,4 +1,8 @@
-.publish-dialog-content {
+.dialog-title {
     font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
-    padding-bottom: 5%;
+    padding: 16px;
+}
+.dialog-content {
+    font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
+    padding: 16px;
 }
