--- a/client/wfnews-war/src/main/angular/src/styles/main.scss
+++ b/client/wfnews-war/src/main/angular/src/styles/main.scss
@@ -16,7 +16,9 @@
 @import 'lightgallery/scss/lightgallery';
 
 html {
-  font-family: $font-family-main;
+  font-family: $font-family-main !important;
+  --mdc-typography-font-family: $font-family-main;
+  --mdc-typography-button-letter-spacing: 0.5px;
 }
 
 .snackbar-error{
@@ -549,13 +551,11 @@ html {
     color: white;
     padding: 10px;
     font-size: 20px;
-    font-weight: 500;
     margin: 0;
   }
   .dialog-content {
     color: black !important;
     background-color: white;
-    padding: 0px 32px 0px 32px;
   }
   .dialog-actions {
     background-color: #eeeeee;
