WFNEWS-1262 : dialog styling (#974)
* Right align

* Default BC Sans

* Fix styling

---------

Co-authored-by: Dylan <dylan.hemsworth@gmail.com>

--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/publish-dialog/publish-dialog.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/publish-dialog/publish-dialog.component.scss
@@ -1,4 +1,8 @@
-.publish-dialog-content {
-    font-family: 'BCSans', 'Open Sans', Verdana, Arial, sans-serif;
-    padding-bottom: 5%;
+.dialog-title {
+    font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
+    padding: 16px;
+}
+.dialog-content {
+    font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
+    padding: 16px;
 }
