--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.html
@@ -48,6 +48,8 @@
       <div style="padding-top: 7px;" *ngIf="evacOrders.length > 0">
         <h4>Active Evacuation Orders and Alerts</h4>
         <div class="evac-list" *ngFor="let evac of evacOrders">
+          <mat-icon [class]="evac.orderAlertStatus === 'Alert' ? 'alert' : 'order'" style="text-decoration: none;">{{
+            evac.orderAlertStatus === 'Alert' ? 'warning' : 'error' }} </mat-icon>
           <a [class]="'label ' + evac.orderAlertStatus === 'Alert' ? 'alert' : 'order'" [href]="evac.uri ? evac.uri : defaultEvacURL"
             target="_blank" rel="noopener">{{ evac.orderAlertStatus }}: {{evac.eventName}}</a>
           <div class="issued-by">(Issued By: {{evac.issuingAgency}})</div>
